--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC202 - Atividade 11: Pedro Muniz</title>
-    <script src="main.js" type="module"></script>
+    <script src="main.js" type= "module"></script> 
 </head>
 <body>
     <main>
@@ -12,15 +12,11 @@
         <p>Esta é a página principal tem código JavaScript nela. Você deve iteragir com os elementos e ver o resultado na página.</p>
         <section>
             <h2>Itens</h2>
-            <p id="entrada" contenteditable>Item</p>
+            <p id ="entrada" contenteditable> Item </p>
             <button id="adicionar">Adicionar</button>
-            <button id="limpar">Limpar Itens</button>
-            <ol id="itens">
-                <li>Primeiro</li>
-                <li>Segundo</li>
-                <li>Terceiro</li>
-            </ol>
+            <button id ="limpar" >Limpar Lista</button>
+            <ol id="itens"> itens</ol>
         </section>
-    </main>
+        </main>
 </body>
 </html>
